# cv-builder

./: .gitignore  CHANGELOG.md  Makefile  data_model.py  input.json  latex.py  latex_2.py  models.py  pyproject.toml  requirements.txt  resume_generator.py  resume_generator_dict.py  test.ipynb  user_interface.py
cv_builder/: main.py  test.py  user_interface.py
